--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/pescadb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
 #.datasource.password=root
-spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url = mysql://shortline.proxy.rlwy.net:26313/railway
 
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
 spring.jpa.hibernate.ddl-auto=none
 
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
