--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,12 @@
 #server.port=4000
 #spring.datasource.url=jdbc:mysql://localhost:3306/pescadb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
-#.datasource.password=root
-spring.datasource.url = mysql://shortline.proxy.rlwy.net:26313/railway
+#spring.datasource.password=root
 
+spring.datasource.url = mysql://shortline.proxy.rlwy.net:26313/railway
 spring.datasource.username=root
 spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
-spring.jpa.hibernate.ddl-auto=none
-
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
