--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.datasource.url = mysql://shortline.proxy.rlwy.net:26313/railway
+spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway
 spring.datasource.username=root
 spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
 spring.jpa.hibernate.ddl-auto=update
