--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway?useSSL
 spring.datasource.username=root
 spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
