--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-#spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway
-spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway
+#spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
