--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway
-#spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway
+spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:26313/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=DQbwwHxTgDzrenlDjMkcdeOwNfSMUVNd
 spring.jpa.hibernate.ddl-auto=update
